--- a/src/app/components/dashboard/navbar/navbar.component.html
+++ b/src/app/components/dashboard/navbar/navbar.component.html
@@ -5,7 +5,7 @@
     <button mat-button [matMenuTriggerFor]="catMenu">Catalogos</button>
     <mat-menu #catMenu="matMenu">
         <button mat-menu-item>Administrativos</button>
-        <button mat-menu-item>SAT</button>
+        <button mat-menu-item routerLink="/dashboard/catalogs">SAT</button>
     </mat-menu>
     <button mat-button routerLink="/dashboard/reports">Reportes</button>
     <span class="example-spacer"></span>
