implementacion boostrap, lazy loaded, proxy, cors

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -9,7 +9,7 @@
       <form [formGroup]="form" (ngSubmit)="onLogin()">
       <mat-form-field class="ancho" appearance="fill">
         <mat-label>Usuario</mat-label>
-        <input matInput name="email" formControlName="email">
+        <input matInput name="username" formControlName="username">
       </mat-form-field>
       <mat-form-field class="ancho" appearance="fill">
         <mat-label>Contraseña</mat-label>
