--- a/src/app/components/catalogs/catalogs.component.css
+++ b/src/app/components/catalogs/catalogs.component.css
@@ -1,11 +1,3 @@
-.container {
-    margin-left: 2rem;
-    margin-right: 2rem;
-    margin-top: 1rem;
-
-
-}
-
 .cards-forms {
     max-width: 85%;
     margin-left: auto;
@@ -15,4 +7,8 @@
 
 .container .mat-form-field + .mat-form-field {
     margin-left: 8px;
-  }
+}
+
+.table tr {
+    height: 15px;
+}
