--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -13,7 +13,7 @@
       </mat-form-field>
       <mat-form-field class="ancho" appearance="fill">
         <mat-label>Contraseña</mat-label>
-        <input matInput name="password" formControlName="password" type="password">
+        <input matInput name="password" formControlName="password" type="password" autocomplete="on">
       </mat-form-field>
       <br>
       <button class="ancho" mat-raised-button mat-button color="primary" type="submit" [disabled]="form.invalid">Enviar</button>
