correcion de error en el loading y navbar, implementacion

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<router-outlet></router-outlet>
-<app-spinner>sipiner</app-spinner>
+<app-navbar (onToggleSideNav)="onToggleSideNav($event)"></app-navbar>
+<app-body
+[collapsed]="isSideNavCollapsed"
+[screenWidth]="screenWidth"
+></app-body>
+<app-spinner></app-spinner>
