--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,2 +1,6 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<!--<app-navbar (onToggleSideNav)="onToggleSideNav($event)"></app-navbar>
+<app-home 
+    [collapsed]="isSideNavCollapsed"
+    [screenWidth]="screenWidth"></app-home>
+<router-outlet></router-outlet>-->
+<h1>Hola dashboard</h1>
