--- a/src/app/components/dashboard/navbar/navbar.component.html
+++ b/src/app/components/dashboard/navbar/navbar.component.html
@@ -1,16 +1,19 @@
-<mat-toolbar color="primary">
-    <span>Sistema</span>
-    <span class="example-spacer"></span>
-    <button mat-button routerLink="/dashboard">Dashboard</button>
-    <button mat-button [matMenuTriggerFor]="catMenu">Catalogos</button>
-    <mat-menu #catMenu="matMenu">
-        <button mat-menu-item>Administrativos</button>
-        <button mat-menu-item routerLink="/dashboard/catalogs">SAT</button>
-    </mat-menu>
-    <button mat-button routerLink="/dashboard/reports">Reportes</button>
-    <span class="example-spacer"></span>
-    <!-- <button mat-button routerLink="/dashboard">LogOut</button> -->
-    <button mat-icon-button class="example-icon" routerLink="/" aria-label="Example icon-button with menu icon" >
-      <mat-icon>logout</mat-icon>
-    </button>
-  </mat-toolbar>
+  <div class="sidenav" [ngClass]="collapsed ? 'sidenav-collapsed' : ''">
+    <div class="logo-container">
+      <button class="logo" (click)="toggleCollapse()">A</button>
+      <div class="logo-text" *ngIf="collapsed" @fadeInOut>Angular</div>
+      <button class="btn-close" *ngIf="collapsed" (click)="closeSidenav()" @rotate>
+        <i class="fal fa-times close-icon"></i>
+      </button>
+    </div>
+    <ul class="sidenav-nav">
+      <li class="sidenav-nav-item" *ngFor="let data of navData ">
+        <a class="sidenav-nav-link" [routerLink]="[data.routeLink]"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{exact:true}">
+          <i class="sidenav-link-icon" [class]="data.icon"></i>
+          <span class="sidenav-link-text" *ngIf="collapsed">{{data.label}}</span>
+        </a>
+      </li>
+    </ul>
+  </div>
