--- a/src/app/components/dashboard/navbar/navbar.component.html
+++ b/src/app/components/dashboard/navbar/navbar.component.html
@@ -8,7 +8,13 @@
     </div>
     <ul class="sidenav-nav">
       <li class="sidenav-nav-item" *ngFor="let data of navData ">
-        <a class="sidenav-nav-link" [routerLink]="[data.routeLink]"
+        <a class="sidenav-nav-link" [routerLink]="[data.routeLink]" *ngIf="!data.subMenu"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{exact:true}">
+          <i class="sidenav-link-icon" [class]="data.icon"></i>
+          <span class="sidenav-link-text" *ngIf="collapsed">{{data.label}}</span>
+        </a>
+        <a class="sidenav-nav-link" [routerLink]="" *ngIf="data.subMenu"
           routerLinkActive="active"
           [routerLinkActiveOptions]="{exact:true}">
           <i class="sidenav-link-icon" [class]="data.icon"></i>
