--- a/src/app/components/dashboard/navbar/navbar.component.html
+++ b/src/app/components/dashboard/navbar/navbar.component.html
@@ -36,7 +36,11 @@
         </li>
       </ul>
     </div>
-    
+    <div class="sidenav-end">
+      <button class="btn sing-out" (click)="singOut()"> Salir
+        <i class="fas fa-sign-out"></i>
+      </button>
+    </div>
 
 
 
