--- a/src/styles.css
+++ b/src/styles.css
@@ -47,7 +47,7 @@ body {
     /* Support for IE. */
     font-feature-settings: 'liga';
   }
-  
+  /**/
 .card {
     display: flex;
     flex-direction: column;
@@ -67,4 +67,9 @@ body {
 
 .card .card-body {
     padding: 1rem 1.5rem; 
+}
+
+.mat-form-field {
+    margin-left: 2px;
+    margin-right: 2px;
 }
