--- a/src/app/components/administracion/cliente/cliente.component.html
+++ b/src/app/components/administracion/cliente/cliente.component.html
@@ -76,32 +76,27 @@
                                     <mat-label>Localdiad</mat-label>
                                     <mat-select>
                                         <mat-option>None</mat-option>
-                                        <mat-option value="option1">Option 1</mat-option>
-                                        <mat-option value="option2">Option 2</mat-option>
-                                        <mat-option value="option3">Option 3</mat-option>
+                                        
                                     </mat-select>
                                 </mat-form-field>
                                 <mat-form-field appearance="fill">
                                     <mat-label>Municipio</mat-label>
                                     <mat-select>
                                         <mat-option>None</mat-option>
-                                        <mat-option value="option1">Option 1</mat-option>
-                                        <mat-option value="option2">Option 2</mat-option>
-                                        <mat-option value="option3">Option 3</mat-option>
+                                        
                                     </mat-select>
                                 </mat-form-field>
                                 <mat-form-field appearance="fill">
                                     <mat-label>Estado</mat-label>
                                     <mat-select>
                                         <mat-option>None</mat-option>
-                                        <mat-option value="option1">Option 1</mat-option>
-                                        <mat-option value="option2">Option 2</mat-option>
-                                        <mat-option value="option3">Option 3</mat-option>
+                                        <mat-option [value]="data.idEstado" *ngFor="let data of lstEstados">{{data.nombre}}</mat-option>
+                                        
                                     </mat-select>
                                 </mat-form-field>
                             </form>
                         </div>
-                        
+                        <!--<div *ngFor="let data of lstEstados">{{data.nombre}}</div>-->
                     </div>
                 </div>
                 
