--- a/src/app/components/administracion/cliente/cliente.component.html
+++ b/src/app/components/administracion/cliente/cliente.component.html
@@ -75,23 +75,22 @@
                                <mat-form-field appearance="fill">
                                     <mat-label>Localdiad</mat-label>
                                     <mat-select>
-                                        <mat-option>None</mat-option>
+                                        <mat-option disabled="">Seleccione...</mat-option>
                                         
                                     </mat-select>
                                 </mat-form-field>
                                 <mat-form-field appearance="fill">
                                     <mat-label>Municipio</mat-label>
-                                    <mat-select>
-                                        <mat-option>None</mat-option>
-                                        
-                                    </mat-select>
+                                    <mat-select formControlName="idMunicipio">
+                                        <mat-option disabled="">Seleccione...</mat-option>
+                                        <mat-option [value]="data.idMunicipio" *ngFor="let data of lstMunicipio">{{data.nombre}}</mat-option>
+                                    </mat-select> 
                                 </mat-form-field>
                                 <mat-form-field appearance="fill">
                                     <mat-label>Estado</mat-label>
-                                    <mat-select>
-                                        <mat-option>None</mat-option>
+                                    <mat-select formControlName="idEstado">
+                                        <mat-option disabled="">Seleccione...</mat-option>
                                         <mat-option [value]="data.idEstado" *ngFor="let data of lstEstados">{{data.nombre}}</mat-option>
-                                        
                                     </mat-select>
                                 </mat-form-field>
                             </form>
