implementacion endpoit para crear cliente

--- a/src/app/components/administracion/cliente/cliente.component.html
+++ b/src/app/components/administracion/cliente/cliente.component.html
@@ -81,9 +81,9 @@
                                     </div>
                                     <div class="col-sm-4">
                                         <mat-form-field class="example-full-width" appearance="fill">
-                                            <mat-label>Colonia</mat-label>
+                                            <mat-label>Colonia/Localidad</mat-label>
                                             <input type="text"
-                                                   placeholder="Pick one"
+                                                   placeholder="Colonia/Localidad"
                                                    aria-label="Colonia"
                                                    matInput
                                                    formControlName="Colonia"
