correcion en el validador de token, construccion de grid para tablas

--- a/src/app/util.service/message/component/messageTemplate.component.html
+++ b/src/app/util.service/message/component/messageTemplate.component.html
@@ -8,7 +8,7 @@
         </span>
     </div>
     <div class="row mt-0 mb-0">
-        {{ModelTemple.title}}
+        {{ModelTemple.body}}
     </div>
 </div>
 <div mat-dialog-actions>
