--- a/src/app/components/administracion/cliente/cliente.component.html
+++ b/src/app/components/administracion/cliente/cliente.component.html
@@ -8,6 +8,9 @@
     </div>
     <div class="container-sm">
         <div class="row">
+            <ng-template #grid_cliente></ng-template>
+        </div>
+        <div class="row">
             <div class="col-10 mx-auto">
                 <div class="card">
                     <div class="card-body">
