--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -44,8 +44,12 @@
   <div class="body flex-grow-1 px-3">
     <c-container breakpoint="lg" class="h-auto">
       <router-outlet></router-outlet>
+      
+      
     </c-container>
   </div>
   <!--app footer-->
+
   <app-default-footer></app-default-footer>
 </div>
+<app-spinner ></app-spinner>
