--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -24,3 +24,13 @@ $enable-rtl: true;
 
 // If you want to add something do it here
 @import "custom";
+
+
+.page-overlay-wrapper {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    z-index: 5000;
+    background: rgba(157, 165, 177, 0.5);
+ } 
