--- a/src/app/views/pages/login/login.component.html
+++ b/src/app/views/pages/login/login.component.html
@@ -51,11 +51,17 @@
                 <button [active]="true" cButton class="mt-3" color="dark" (click)="register()">
                   Register Now!
                 </button>
+                <button [active]="true" cButton class="mt-3" color="dark" (click)="modal()">
+                  mensaje
+                </button>
               </div>
             </c-card-body>
           </c-card>
         </c-card-group>
       </c-col>
     </c-row>
+    
   </c-container>
 </div>
+<app-spinner ></app-spinner>
+<app-message #msLogin></app-message>
